Update JPMS flags for clients and the server to be loaded from external options files